--- a/translations/kangyur/translations/090-002_toh558_destroyer_of_the_great_trichiliocosm.xml
+++ b/translations/kangyur/translations/090-002_toh558_destroyer_of_the_great_trichiliocosm.xml
@@ -16,13 +16,13 @@
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the Dharmachakra Translation Committee<lb/> under the patronage and
                     supervision of 84000: Translating the Words of the Buddha</author>
                 <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chökyi Nyima Rinpoche</consultant>
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
                 <author role="translatorEng" ref="contributors.xml#person-51">James Gentry</author>
                 <editor role="reviser" ref="contributors.xml#person-50">Andreas Doctor</editor>
                 <editor role="TEImarkupEditor" ref="contributors.xml#person-306">Simeon Joffe</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.5.21 <date>2021</date>
+                <edition>v 1.5.22 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -51,42 +51,41 @@
                     <location work="UT4CZ5369" count-pages="49">
                         <volume number="90" start-page="124" end-page="172"/>
                     </location>
-                <idno parent-id="O1JC114941JC21415"/>
-                <idno source-id="O1JC114941JC12286" work="W22084"/>
+                    <idno parent-id="O1JC114941JC21415"/>
+                    <idno source-id="O1JC114941JC12286" work="W22084"/>
                 </bibl>
-            
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T15:34:40.705Z" user="celso">18/01/2023 15:34:40</note>
-            <note type="updated" update="text-version" value="v 1.27" date-time="2019-06-18T16:30:45.636Z" user="celso">v 1.27 2019</note>
+                <note type="lastUpdated" date-time="2023-05-24T14:15:57.506Z" user="admin">24/05/2023 14:15:57</note>
+                <note type="updated" update="text-version" value="v 1.27" date-time="2019-06-18T16:30:45.636Z" user="celso">v 1.27 2019</note>
                 <note type="updated" update="text-version" value="v 1.28" date-time="2019-07-26T10:26:35.074Z" user="laura">v 1.28 2019</note>
                 <note type="updated" update="text-version" value="v 1.29" date-time="2019-09-30T19:13:42.358Z" user="andre">Updated due to folio numbering correction</note>
-<note type="updated" update="text-version" value="v 1.30.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
-    <note type="updated" update="text-version" value="v 1.4.1" date-time="2020-04-24T07:06:14.91Z" user="john">Added note identifying Ratanasutta verses</note>
-    <note type="updated" update="text-version" value="v 1.4.2" date-time="2020-05-02T17:31:47.469Z" user="john">Changed title of Toh 563.</note>
-    <note type="updated" update="text-version" value="v 1.5.1" date-time="2020-07-28T10:34:51.017Z" user="john">Update with extra biblio entries, notes, etc. to accommodate Toh 813 and related findings.</note>
-    <note type="updated" update="text-version" value="v 1.5.2" date-time="2020-07-29T14:32:54.61Z" user="john">Various fixes after Konchog's proofread.</note>
-    <note type="updated" update="text-version" value="v 1.5.3" date-time="2020-07-29T14:44:36.173Z" user="john">Various small fixes after Konchog's proofread of Toh 813.</note>
-    <note type="updated" update="text-version" value="1.5.4" date-time="2020-08-31T20:16:46.43Z" user="laura">edited acknowledgement</note>
-    <note type="updated" update="text-version" value="1.5.5" date-time="2020-09-02T20:09:59.412Z" user="laura">minor edit to title tag (Sa-Ltn–en)</note>
-    <note type="updated" update="text-version" value="1.5.6" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
-    <note type="updated" update="text-version" value="1.5.7" date-time="2020-11-25T15:55:12.245Z" user="celso">Updated pending links</note>
-    <note type="updated" update="text-version" value="1.5.8" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
-    <note type="updated" update="text-version" value="1.5.9" date-time="2021-02-09T17:01:20.112Z" user="celso">Activated pending link, "scholar" to "preceptor" in colophon</note>
-    <note type="updated" update="text-version" value="1.5.10" date-time="2021-02-10T20:09:44.049Z" user="celso">fixed mislabled date</note>
-    <note type="updated" update="text-version" value="1.5.11" date-time="2021-03-12T19:10:46.536Z" user="celso">Non-breaking spaces before dandas</note>
-    <note type="updated" update="text-version" value="1.5.12" date-time="2021-03-12T19:11:33.579Z" user="celso">reset blank pdfs</note>
-    <note type="updated" update="text-version" value="1.5.13" date-time="2021-03-19T16:43:21.76Z" user="celso">Tib spelling error in glossary</note>
+                <note type="updated" update="text-version" value="v 1.30.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
+                <note type="updated" update="text-version" value="v 1.4.1" date-time="2020-04-24T07:06:14.91Z" user="john">Added note identifying Ratanasutta verses</note>
+                <note type="updated" update="text-version" value="v 1.4.2" date-time="2020-05-02T17:31:47.469Z" user="john">Changed title of Toh 563.</note>
+                <note type="updated" update="text-version" value="v 1.5.1" date-time="2020-07-28T10:34:51.017Z" user="john">Update with extra biblio entries, notes, etc. to accommodate Toh 813 and related findings.</note>
+                <note type="updated" update="text-version" value="v 1.5.2" date-time="2020-07-29T14:32:54.61Z" user="john">Various fixes after Konchog's proofread.</note>
+                <note type="updated" update="text-version" value="v 1.5.3" date-time="2020-07-29T14:44:36.173Z" user="john">Various small fixes after Konchog's proofread of Toh 813.</note>
+                <note type="updated" update="text-version" value="1.5.4" date-time="2020-08-31T20:16:46.43Z" user="laura">edited acknowledgement</note>
+                <note type="updated" update="text-version" value="1.5.5" date-time="2020-09-02T20:09:59.412Z" user="laura">minor edit to title tag (Sa-Ltn–en)</note>
+                <note type="updated" update="text-version" value="1.5.6" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
+                <note type="updated" update="text-version" value="1.5.7" date-time="2020-11-25T15:55:12.245Z" user="celso">Updated pending links</note>
+                <note type="updated" update="text-version" value="1.5.8" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
+                <note type="updated" update="text-version" value="1.5.9" date-time="2021-02-09T17:01:20.112Z" user="celso">Activated pending link, "scholar" to "preceptor" in colophon</note>
+                <note type="updated" update="text-version" value="1.5.10" date-time="2021-02-10T20:09:44.049Z" user="celso">fixed mislabled date</note>
+                <note type="updated" update="text-version" value="1.5.11" date-time="2021-03-12T19:10:46.536Z" user="celso">Non-breaking spaces before dandas</note>
+                <note type="updated" update="text-version" value="1.5.12" date-time="2021-03-12T19:11:33.579Z" user="celso">reset blank pdfs</note>
+                <note type="updated" update="text-version" value="1.5.13" date-time="2021-03-19T16:43:21.76Z" user="celso">Tib spelling error in glossary</note>
                 <note type="updated" update="text-version" value="1.5.14" date-time="2021-05-01T03:16:29.006Z" user="celso">activated pending links to 1-6</note>
-    <note type="updated" update="text-version" value="1.5.15" date-time="2021-06-26T03:55:03.527Z" user="celso">kiṃnara to kinnara</note>
-    <note type="updated" update="text-version" value="1.5.16" date-time="2021-09-23T20:16:38.124Z" user="celso">"Compendium of Incantations" to "Compendium of Dhāraṇīs"</note>
-    <note type="updated" update="text-version" value="1.5.17" date-time="2021-11-03T14:24:24.45Z" user="celso">activated pending links</note>
-
-    <note type="updated" update="text-version" value="1.5.18" date-time="2021-11-03T14:28:12.377Z" user="celso">minor typo in bibl</note>
-    <note type="updated" update="text-version" value="1.5.19" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
-    <note type="updated" update="text-version" value="1.5.20" date-time="2023-01-07T15:50:29.41Z" user="andre">Adjustment in definition</note>
-    <note type="updated" update="text-version" value="1.5.21" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="1.5.15" date-time="2021-06-26T03:55:03.527Z" user="celso">kiṃnara to kinnara</note>
+                <note type="updated" update="text-version" value="1.5.16" date-time="2021-09-23T20:16:38.124Z" user="celso">"Compendium of Incantations" to "Compendium of Dhāraṇīs"</note>
+                <note type="updated" update="text-version" value="1.5.17" date-time="2021-11-03T14:24:24.45Z" user="celso">activated pending links</note>
+                <note type="updated" update="text-version" value="1.5.18" date-time="2021-11-03T14:28:12.377Z" user="celso">minor typo in bibl</note>
+                <note type="updated" update="text-version" value="1.5.19" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.5.20" date-time="2023-01-07T15:50:29.41Z" user="andre">Adjustment in definition</note>
+                <note type="updated" update="text-version" value="1.5.21" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.5.22" date-time="2023-05-24T14:15:54.544Z" user="martina-cotter">Added pending links.</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
@@ -3458,10 +3457,11 @@
                             Incantations</title> (<title xml:lang="Sa-Ltn">Mahā­māyūrī­vidyā­rājñī</title>, Toh 559). 84000:
                         Translating the Words of the Buddha, (forthcoming).<ref rend="pending" target="https://read.84000.co/translation/toh559.html"/>
                     </bibl>
-                    <bibl xml:id="UT22084-090-002-438">——— (tr.). <title xml:lang="en">The Noble Great Amulet, Queen of
-                            Incantations</title> (<title xml:lang="Sa-Ltn">Mahā­pratisarā­vidyā­rājñī</title>, Toh 561). 84000:
-                        Translating the Words of the Buddha, (forthcoming).<ref rend="pending" target="https://read.84000.co/translation/toh561.html"/>
-                    </bibl>
+                    <bibl xml:id="UT22084-090-002-438">——— (tr.). <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh561.html">The Noble Great Amulet, Queen of
+                        Incantations</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Mahā­pratisarā­vidyā­rājñī</title>, Toh 561). 84000:
+                        Translating the Words of the Buddha, (forthcoming).</bibl>
                     <bibl xml:id="UT22084-090-002-439">——— (tr.). <title xml:lang="en">The Sūtra of Great Cool Grove</title>,
                             (<title xml:lang="en">Mahāśītavana</title>, Toh 562). 84000: Translating the Words of the Buddha,
                         (forthcoming).<ref rend="pending" target="https://read.84000.co/translation/toh562.html"/>
@@ -3585,13 +3585,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-090-002-459">
+                        <gloss xml:id="UT22084-090-002-459" type="term" mode="match">
                             <term>bhūta</term>
-                            <term xml:lang="Bo-Ltn">’byung po </term>
-                            <term xml:lang="bo">འབྱུང་པོ།</term>
-                            <term xml:lang="Sa-Ltn">bhūta</term>
-                            <term type="definition">A general term for spirit, ghost, or demon (either positive or
-                                negative).</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">’byung po</term>
+                            <term xml:lang="bo" type="sourceAttested">འབྱུང་པོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhūta</term>
+                            <term type="definition">A general term for spirit, ghost, or demon (either positive or negative).</term>
                         </gloss>
                     </item>
                     <item>
