--- a/translations/kangyur/placeholders/072-005_toh305-sutra_of_the_highest_designation.xml
+++ b/translations/kangyur/placeholders/072-005_toh305-sutra_of_the_highest_designation.xml
@@ -12,12 +12,13 @@
                 <author role="translatorEng" ref="eft:person-316">Giuliano Francisco Proença</author>
                 <editor role="reviser" ref="eft:person-359">Daniela Espíndola</editor>
                 <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2021</date>
+                <edition>v 0.0.11 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-072-005"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-28T10:38:48.006Z" user="admin">28/04/2023 10:38:48</note>
+                <note type="lastUpdated" date-time="2023-05-25T07:16:51.617Z" user="admin">25/05/2023 07:16:51</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-08-04T12:43:53.916Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-04T12:43:53.916Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-09-01T13:51:37.257Z" user="line-tofte">3</note>
@@ -49,6 +50,9 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-24T12:33:31.752Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-04-28T10:38:43.694Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-28T10:38:43.694Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-04-28T10:39:19.613Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-05-25T07:16:47.331Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-05-25T07:16:47.331Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
