--- a/translations/kangyur/placeholders/066-009_toh251-the_sutra_on_four_precepts.xml
+++ b/translations/kangyur/placeholders/066-009_toh251-the_sutra_on_four_precepts.xml
@@ -15,10 +15,10 @@
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2021</date>
+                <edition>v 0.0.11 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-066-009"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-17T09:58:52.336Z" user="admin">17/05/2023 09:58:52</note>
+                <note type="lastUpdated" date-time="2023-05-25T07:40:56.583Z" user="admin">25/05/2023 07:40:56</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-08T07:59:06.674Z" user="line-tofte">Auto (update-contributors)</note>
@@ -51,6 +51,8 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-20T09:54:17.008Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2023-05-17T09:58:48.003Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-05-17T09:58:48.003Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-05-25T07:40:52.321Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-05-25T07:40:52.321Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
