--- a/translations/kangyur/placeholders/091-043_toh646,1080-the_incantation_for_protection_from_the_blazing_flames_coming_from_the_mouths_of_ghosts.xml
+++ b/translations/kangyur/placeholders/091-043_toh646,1080-the_incantation_for_protection_from_the_blazing_flames_coming_from_the_mouths_of_ghosts.xml
@@ -11,13 +11,15 @@
                 <author role="translatorMain" ref="eft:team-56"/>
                 <author role="translatorEng" ref="eft:person-7">Paul Hackett</author>
                 <consultant role="projectManager" ref="eft:person-7">Paul Hackett</consultant>
-                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2020</date>
+                <edition>v 0.0.12 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-091-043"/>
                 <date/>
             </publicationStmt>
@@ -42,7 +44,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-24T12:34:53.595Z" user="admin">24/04/2023 12:34:53</note>
+                <note type="lastUpdated" date-time="2023-05-25T13:55:49.479Z" user="admin">25/05/2023 13:55:49</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:58:32.717Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:58:32.717Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-30T10:10:37.807Z" user="line-tofte">3</note>
@@ -58,6 +60,10 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-01T14:13:41.984Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-04-24T12:34:49.319Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-24T12:34:49.319Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-04-24T12:35:27.16Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-05-17T13:02:52.312Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-05-25T13:55:44.994Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-05-25T13:55:44.994Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
