--- a/translations/kangyur/placeholders/091-044_toh647,1079-the_oblation_ritual_which_comforts_the_female_ghosts_whose_mouths_are_aflame.xml
+++ b/translations/kangyur/placeholders/091-044_toh647,1079-the_oblation_ritual_which_comforts_the_female_ghosts_whose_mouths_are_aflame.xml
@@ -18,13 +18,15 @@
                 <consultant role="advisor" ref="eft:person-293">Beáta Kakas</consultant>
                 <consultant role="dharmaMaster" ref="eft:person-294">Karma Dorje (Rabjampa)</consultant>
                 <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.11 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-091-044"/>
                 <date/>
             </publicationStmt>
@@ -49,7 +51,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-24T12:29:16.388Z" user="admin">24/04/2023 12:29:16</note>
+                <note type="lastUpdated" date-time="2023-05-25T13:57:53.135Z" user="admin">25/05/2023 13:57:53</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-17T09:16:33.593Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-02-17T09:16:33.593Z" user="andreas">2.h</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-17T14:12:13.249Z" user="andreas">3</note>
@@ -66,6 +68,10 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-01T14:49:31.858Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-04-24T12:29:12.118Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-04-24T12:29:12.118Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-24T12:30:53.813Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-05-17T13:03:34.903Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-05-25T13:57:48.663Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-05-25T13:57:48.663Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
