--- a/translations/kangyur/placeholders/034-014_toh26-the_perfection_of_wisdom_for_suryagarbha.xml
+++ b/translations/kangyur/placeholders/034-014_toh26-the_perfection_of_wisdom_for_suryagarbha.xml
@@ -19,10 +19,10 @@
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2022</date>
+                <edition>v 0.0.13 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-034-014"/>
                 <date/>
             </publicationStmt>
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-02T15:04:39.909Z" user="admin">02/05/2023 15:04:39</note>
+                <note type="lastUpdated" date-time="2023-05-25T14:05:19.213Z" user="admin">25/05/2023 14:05:19</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:46:01.807Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:46:01.807Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-05-18T11:25:29.991Z" user="line-tofte">3</note>
@@ -59,6 +59,8 @@
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-04-17T08:47:20.552Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-05-02T15:04:35.556Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-05-02T15:04:35.556Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-05-25T14:05:14.802Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2023-05-25T14:05:14.802Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
