--- a/translations/kangyur/placeholders/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
+++ b/translations/kangyur/placeholders/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
@@ -19,10 +19,10 @@
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2022</date>
+                <edition>v 0.0.15 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-034-016"/>
                 <date/>
             </publicationStmt>
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-02T15:06:50.156Z" user="admin">02/05/2023 15:06:50</note>
+                <note type="lastUpdated" date-time="2023-05-25T14:12:10.263Z" user="admin">25/05/2023 14:12:10</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:47:31.921Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:47:31.921Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-05-18T13:04:32.358Z" user="line-tofte">3</note>
@@ -61,6 +61,8 @@
                 <note type="updated" update="text-version" value="0.0.13" date-time="2023-04-17T08:49:10.327Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-05-02T15:06:45.786Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.14" date-time="2023-05-02T15:06:45.786Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-05-25T14:12:05.871Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.15" date-time="2023-05-25T14:12:05.871Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
