--- a/translations/kangyur/translations/040-002_toh51-the_teaching_on_the_armor_array.xml
+++ b/translations/kangyur/translations/040-002_toh51-the_teaching_on_the_armor_array.xml
@@ -29,7 +29,7 @@
                 <sponsor ref="sponsors.xml#sponsor-202">Qing Dao Zheng Jian Group</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.6 <date>2021</date>
+                <edition>v 1.0.7 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -64,7 +64,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-06T15:58:43.565Z" user="celso">06/02/2023 15:58:43</note>
+                <note type="lastUpdated" date-time="2023-05-25T17:59:45.914Z" user="admin">25/05/2023 17:59:45</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:09:48.105Z" user="mike">2.f</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2020-09-11T11:28:36.868Z" user="line-tofte">2.e</note>
@@ -94,6 +94,7 @@
                 <note type="updated" update="text-version" value="1.0.4" date-time="2022-07-10T12:58:49.853Z" user="john">Harmonization of trailer and colophon</note>
                 <note type="updated" update="text-version" value="1.0.5" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.0.7" date-time="2023-05-25T17:59:42.959Z" user="konchog">One small fix to a Kangyur citation.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -389,7 +390,7 @@
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-040-002-43"/>
                     <lg tid="44">
-                        <l>“With the finest voice<note place="end" xml:id="UT22084-040-002-44"> Tib. <foreign xml:lang="Bo-Ltn" type="term">yangs</foreign> read as <foreign xml:lang="Bo-Ltn" type="term">dbyangs</foreign> according to the Yunglo and Narthang variants of the
+                        <l>“With the finest voice<note place="end" xml:id="UT22084-040-002-44"> Tib. <foreign xml:lang="Bo-Ltn" type="term">yangs</foreign> read as <foreign xml:lang="Bo-Ltn" type="term">dbyangs</foreign> according to the Yongle and Narthang variants of the
                                 Kangyur. Comparative Edition, page 191, note 6.</note> and extraordinary diligence,</l>
                         <l>You teach in pleasing tones.</l>
                         <l>When beings hear your teaching,</l>
