--- a/translations/kangyur/placeholders/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/placeholders/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -13,10 +13,10 @@
                 <editor role="reviser" ref="contributors.xml#person-343">Prof. Stephen Jenkins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-034-025"/>
                 <date/>
             </publicationStmt>
@@ -32,12 +32,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-25T09:04:21.955Z" user="admin">25/04/2022 09:04:21</note>
+                <note type="lastUpdated" date-time="2023-05-30T13:07:33.428Z" user="admin">30/05/2023 13:07:33</note>
     <note type="updated" update="translation-status" value="3" date-time="2020-10-09T14:15:24.786Z" user="line-tofte">3</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-09T14:15:24.786Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-09T14:18:48.286Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="0.0.3" date-time="2020-10-09T14:20:29.626Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2020-10-09T14:31:27.468Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T09:04:14.241Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T09:04:14.241Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.4" date-time="2020-10-09T14:31:27.468Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T09:04:14.241Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T09:04:14.241Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-05-30T13:07:29.076Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-30T13:07:29.076Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
