--- a/translations/kangyur/placeholders/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/placeholders/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -4,17 +4,21 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">chos kyi rgyal mtshan gyi mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">dharmaketusūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Dharmaketu</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos kyi rgyal mtshan gyi mdo theg pa chen pa'o</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">dharmaketusūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">chos kyi rgyal mtshan gyi mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadharmaketumahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos kyi rgyal mtshan gyi mdo theg pa chen pa'o</title>
+                <author role="translatorMain" ref="eft:team-61"/>
+                <consultant role="projectManager" ref="eft:person-361">Bhikṣuṇī Thubten Damcho</consultant>
+                <author role="translatorEng" ref="eft:person-361">Bhikṣuṇī Thubten Damcho</author>
+                <author role="translatorEng" ref="eft:person-435">Norbu Samphel </author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-066-012"/>
                 <date/>
             </publicationStmt>
@@ -30,8 +34,16 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-11T13:38:39.957Z" user="admin">11/05/2023 13:38:39</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-12-25T17:17:57.903Z" user="john">Translation of title changed</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:24:18.797Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-01T09:24:18.797Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:38:35.538Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-05-11T13:38:35.538Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-05-30T14:42:00.876Z" user="admin">30/05/2023 14:42:00</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-12-25T17:17:57.903Z" user="john">Translation of title changed</note>
+                <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:24:18.797Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-01T09:24:18.797Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:38:35.538Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-05-11T13:38:35.538Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-05-11T13:39:10.224Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-11T13:39:34.382Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-05-30T14:41:56.425Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-05-30T14:41:56.425Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
