--- a/translations/kangyur/placeholders/034-030_toh42-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/placeholders/034-030_toh42-the_sutra_of_the_moon.xml
@@ -16,10 +16,10 @@
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2020</date>
+                <edition>v 0.0.12 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-034-030"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +35,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-01T10:59:50.832Z" user="admin">01/05/2023 10:59:50</note>
+                <note type="lastUpdated" date-time="2023-05-30T15:01:24.725Z" user="admin">30/05/2023 15:01:24</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-12-08T12:56:12.293Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-08T12:56:12.293Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:30:56.299Z" user="line-tofte">3</note>
@@ -54,6 +54,8 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-04-05T14:56:43.738Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2023-05-01T10:59:46.552Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-05-01T10:59:46.552Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-05-30T15:01:20.374Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-05-30T15:01:20.374Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
