--- a/translations/kangyur/placeholders/072-031_toh331-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/placeholders/072-031_toh331-the_sutra_of_the_moon.xml
@@ -15,10 +15,10 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2020</date>
+                <edition>v 0.0.13 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-072-031"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-21T10:08:46.357Z" user="admin">21/04/2023 10:08:46</note>
+                <note type="lastUpdated" date-time="2023-05-30T15:02:15.184Z" user="admin">30/05/2023 15:02:15</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:51:52.984Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:51:52.984Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:52:46.21Z" user="line-tofte">3</note>
@@ -54,6 +54,8 @@
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-04-05T15:33:31.296Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2023-04-21T10:08:42.062Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-04-21T10:08:42.062Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-05-30T15:02:10.817Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2023-05-30T15:02:10.817Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
