--- a/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
+++ b/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
@@ -9,13 +9,15 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">gang gA'i zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryagaṅgottara­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gang gA'i mchog gis zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-434">Sophie McGrath</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-043-012"/>
                 <date/>
             </publicationStmt>
@@ -31,13 +33,16 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-17T07:13:47.922Z" user="admin">17/04/2023 07:13:47</note>
+                <note type="lastUpdated" date-time="2023-05-30T15:07:16.947Z" user="admin">30/05/2023 15:07:16</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="" date-time="2023-03-22T14:05:04.88Z" user="line-tofte"/>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-22T14:05:04.88Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-22T14:08:35.938Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="3" date-time="2023-04-17T07:13:43.571Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2023-04-17T07:13:43.571Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-04-17T07:14:27.892Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-05-30T15:07:12.57Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-30T15:07:12.57Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
