--- a/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
+++ b/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
@@ -9,13 +9,15 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshangs pa'i dpal lung bstan pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabrahmaśrīvyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa tshangs pa'i dpal lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-434">Sophie McGrath</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-061-009"/>
                 <date/>
             </publicationStmt>
@@ -31,13 +33,16 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-17T07:14:57.892Z" user="admin">17/04/2023 07:14:57</note>
+                <note type="lastUpdated" date-time="2023-05-30T15:11:44.556Z" user="admin">30/05/2023 15:11:44</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="" date-time="2023-03-22T14:10:50.859Z" user="line-tofte"/>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-22T14:10:50.859Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-22T14:11:42.636Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="3" date-time="2023-04-17T07:14:53.544Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2023-04-17T07:14:53.544Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-04-17T07:15:28.591Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-05-30T15:11:40.167Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-30T15:11:40.167Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
