--- a/translations/kangyur/placeholders/066-009_toh251-the_sutra_on_four_precepts.xml
+++ b/translations/kangyur/placeholders/066-009_toh251-the_sutra_on_four_precepts.xml
@@ -13,12 +13,13 @@
                 <author role="translatorEng" ref="eft:person-258">Adam Pearcey</author>
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2021</date>
+                <edition>v 0.0.13 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-066-009"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +35,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-25T07:40:56.583Z" user="admin">25/05/2023 07:40:56</note>
+                <note type="lastUpdated" date-time="2023-05-31T10:06:23.22Z" user="admin">31/05/2023 10:06:23</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-08T07:59:06.674Z" user="line-tofte">Auto (update-contributors)</note>
@@ -53,6 +54,9 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-05-17T09:58:48.003Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-05-25T07:40:52.321Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-05-25T07:40:52.321Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-05-25T07:41:27.118Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-05-31T10:06:18.916Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2023-05-31T10:06:18.916Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
