--- a/translations/kangyur/placeholders/066-008_toh250-the_sutra_on_four_points.xml
+++ b/translations/kangyur/placeholders/066-008_toh250-the_sutra_on_four_points.xml
@@ -12,12 +12,13 @@
                 <author role="translatorEng" ref="eft:person-258">Adam Pearcey</author>
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2021</date>
+                <edition>v 0.0.13 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-066-008"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-25T07:38:09.505Z" user="admin">25/05/2023 07:38:09</note>
+                <note type="lastUpdated" date-time="2023-05-31T10:08:05.306Z" user="admin">31/05/2023 10:08:05</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-08T07:57:37.013Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-08T07:57:37.013Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-08T07:57:53.875Z" user="line-tofte">Auto (update-contributors)</note>
@@ -52,6 +53,9 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-05-17T09:56:36.163Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-05-25T07:38:05.254Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-05-25T07:38:05.254Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-05-25T07:40:16.742Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-05-31T10:08:01.022Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2023-05-31T10:08:01.022Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
