--- a/translations/kangyur/placeholders/089-013_toh556-the_sovereign_lord_of_sutras_the_golden_light.xml
+++ b/translations/kangyur/placeholders/089-013_toh556-the_sovereign_lord_of_sutras_the_golden_light.xml
@@ -17,11 +17,11 @@
                 <sponsor ref="sponsors.xml#sponsor-2">E E, May-E, Minda, Chung-Da Ho</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-089-013"/>
                 <date/>
             </publicationStmt>
@@ -37,10 +37,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:32:04.133Z" user="admin">26/07/2022 07:32:04</note>
+                <note type="lastUpdated" date-time="2023-05-31T13:10:42.085Z" user="admin">31/05/2023 13:10:42</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-06T13:47:16.072Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:31:56.498Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-05-31T13:10:37.85Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-05-31T13:10:37.85Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
