--- a/translations/kangyur/placeholders/062-019_toh219-the_sutra_on_putting_an_end_to_karmic_obscurations.xml
+++ b/translations/kangyur/placeholders/062-019_toh219-the_sutra_on_putting_an_end_to_karmic_obscurations.xml
@@ -15,11 +15,11 @@
                 <consultant role="projectManager" ref="contributors.xml#person-143">Emily Bower</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-062-019"/>
                 <date/>
             </publicationStmt>
@@ -35,14 +35,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-02-04T16:25:20.806Z" user="admin">04/02/2021 16:25:20</note>
+                <note type="lastUpdated" date-time="2023-05-31T14:29:38.569Z" user="admin">31/05/2023 14:29:38</note>
             
 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-25T08:33:28.637Z" user="line-tofte">2.h</note>
 <note type="updated" update="translation-status" value="3" date-time="2020-03-25T08:34:33.407Z" user="line-tofte">3</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2020-04-21T14:14:53.058Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-04T16:25:03.608Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-04T16:25:16.599Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-04T16:25:16.599Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-05-31T14:29:34.075Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-05-31T14:29:34.075Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
