--- a/translations/kangyur/translations/072-002_toh302-what_medicants_hold_most_dear.xml
+++ b/translations/kangyur/translations/072-002_toh302-what_medicants_hold_most_dear.xml
@@ -30,7 +30,7 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -50,7 +50,7 @@
                 <idno xml:id="UT22084-072-002"/>
                 <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0">An early mistake in the assigning of UT numbers within the 84000 project means that
           these ids diverge slightly from the standard logic.</tei:note>
-                <date>2021-12-13</date>
+                <date>2022-12-13</date>
             </publicationStmt>
       <sourceDesc>
         <bibl key="toh302" type="text">
@@ -64,7 +64,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-01-18T17:12:29.954Z" user="celso">18/01/2023 17:12:29</note>
+        <note type="lastUpdated" date-time="2023-06-01T07:15:12.173Z" user="admin">01/06/2023 07:15:12</note>
         <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="translation-status" value="4" date-time="2020-10-02T13:50:21.606Z" user="line-tofte">4</tei:note>
         <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:50:21.606Z" user="line-tofte">0.0.1</tei:note>
         <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="translation-status" value="3" date-time="2020-11-30T09:56:09.316Z" user="line-tofte">3</tei:note>
@@ -106,6 +106,7 @@
           <note type="updated" update="translation-status" value="1" date-time="2023-01-15T08:13:38.071Z" user="sameer">1</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2023-01-15T08:13:38.071Z" user="sameer">Included in App v 2.8</note>
           <note type="updated" update="text-version" value="1.0.3" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+          <note type="updated" update="text-version" value="1.0.4" date-time="2023-06-01T07:15:08.818Z" user="admin">Auto (update-publication-status)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
