--- a/translations/kangyur/placeholders/090-001_toh557-the_sovereign_lord_of_sutras_the_sublime_golden_light.xml
+++ b/translations/kangyur/placeholders/090-001_toh557-the_sovereign_lord_of_sutras_the_sublime_golden_light.xml
@@ -10,18 +10,19 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasuvarṇaprabhāsottama­sūtrendrarājanāma­mahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gser 'od dam pa mdo sde'i dbang po'i rgyal po zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="zh">《妙金光明​經部之王經》</title>
-                <author role="translatorMain" ref="contributors.xml#team-22"/>
-                <author role="translatorEng" ref="contributors.xml#person-142">Dr. Peter Alan Roberts</author>
-                <editor role="reviser" ref="contributors.xml#person-143">Emily Bower</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-143">Emily Bower</consultant>
+                <author role="translatorMain" ref="eft:team-22"/>
+                <author role="translatorEng" ref="eft:person-142">Peter Alan Roberts</author>
+                <editor role="reviser" ref="eft:person-143">Emily Bower</editor>
+                <consultant role="projectManager" ref="eft:person-143">Emily Bower</consultant>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
                 <sponsor ref="sponsors.xml#sponsor-2">May Gu, Likai Gu and Tiffany Tai, Lillian Gu and Jerry Yen, and dedicated to George Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-090-001"/>
                 <date/>
             </publicationStmt>
@@ -37,10 +38,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:33:36.704Z" user="admin">26/07/2022 07:33:36</note>
+                <note type="lastUpdated" date-time="2023-06-01T08:40:08.575Z" user="admin">01/06/2023 08:40:08</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-06T14:32:39.156Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:33:29.038Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-01T07:49:02.374Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-06-01T08:40:04.242Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-06-01T08:40:04.242Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
