--- a/translations/kangyur/placeholders/040-001_toh50-the_array_of_the_tathagata_aksobhya.xml
+++ b/translations/kangyur/placeholders/040-001_toh50-the_array_of_the_tathagata_aksobhya.xml
@@ -15,10 +15,10 @@
                 <sponsor ref="sponsors.xml#sponsor-5">Zhou Tian Yu, Chen Yi Qin, Irene Tillman, Archie Kao, Zhou Xun, Zhao Xuan</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.9 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-040-001"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T15:58:13.419Z" user="admin">29/06/2022 15:58:13</note>
+                <note type="lastUpdated" date-time="2023-06-06T08:30:36.454Z" user="admin">06/06/2023 08:30:36</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-08-19T10:28:19.563Z" user="admin">0.0.1</note>
                 <note type="updated" update="publication-date" value="" date-time="2020-08-19T10:28:19.563Z" user="admin"/>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:34:42.324Z" user="line-tofte">4</note>
@@ -48,6 +48,8 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-05-23T08:45:19.58Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-23T08:45:47.264Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-06-29T15:58:05.916Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-06-06T08:30:32.209Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-06-06T08:30:32.209Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
